--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
-<<!DOCTYPE html>
 <html>
 <head>
     <title>Foundation Maths</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="scripts/scripts.js"></script>
 </head>
 <body>
+
+   <!--  <nav class="navbar navbar-default">
+       <div class="container-fluid">
+           <div class="navbar-header">
+               <button type="button" class="navbar-toggle-collapsed" data-toggle="collapse" data-target="#navbar">
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">MF</a>
+           </div>
+           <div class="collapse navbar-collapse" id="navbar">
+               <ul class="nav navbar-nav">
+                   <li>Prime numbers</li>
+               </ul>
+           </div>
+       </div>
+    </nav> -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="panel">
+                    <div class="panel-heading"><h2>Prime number</h2>
+                    <div class="panel-body">
+                        <p>A <span class="text-danger">prime number</span> is a positive integer, larger than 1, which cannot be expressed as a product of two smaller positive integers. To put it another way, a prime number is one that can be divided exactly only by 1 and itself</p>
+                        <div class="bg-info">EX: 2, 3, 5, 7, 11, 19, 23 etc</div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
