--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 
     <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="styles.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="scripts/scripts.js"></script>
 </head>
 <body>
@@ -19,13 +20,21 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="panel">
-                    <div class="panel-heading"><h2>Prime number</h2>
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h2>Prime number</h2></div>
                     <div class="panel-body">
                         <p>A <span class="text-danger">prime number</span> is a positive integer, larger than 1, which cannot be expressed as a product of two smaller positive integers. To put it another way, a prime number is one that can be divided exactly only by 1 and itself</p>
                         <div class="bg-info">EX: 2, 3, 5, 7, 11, 19, 23 etc</div>
                     </div>
-
+                    <div class="panel-footer">
+                      <form id="isPrime">
+                          <input type="number">
+                          <button class="btn btn-primary">
+                              Check!
+                          </button>
+                          <output class="isPrimeResult"></output>
+                      </form>
+                    </div>
                 </div>
             </div>
         </div>
